k8s/clusters/glug-infra/activitypub/pubsub-emulator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pubsub-ap
  namespace: ghost
  labels:
    app.kubernetes.io/name: pubsub-ap
    app.kubernetes.io/part-of: ghost-activitypub
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: pubsub-ap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pubsub-ap
        app.kubernetes.io/part-of: ghost-activitypub
    spec:
      tolerations:
        - key: node-role.glug.infra/storage
          operator: Equal
          value: "true"
          effect: NoSchedule
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.glug.infra/storage
                    operator: In
                    values:
                      - "true"
      containers:
        - name: pubsub
          image: gcr.io/google.com/cloudsdktool/google-cloud-cli:499.0.0-emulators
          command:
            - /bin/bash
            - -c
            - |
              [...]
          ports:
            - name: pubsub
              containerPort: 8085
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8085
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: pubsub-ap
  namespace: ghost
spec:
  selector:
    app.kubernetes.io/name: pubsub-ap
  ports:
    - name: pubsub
      port: 8085
      targetPort: 8085
